operator/scg-openapi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scg-openapi
  namespace: spring-cloud-gateway
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: scg-openapi.bearisland.tkg-vsphere-lab.winterfell.life
      http:
        paths:
        - backend:
            serviceName: scg-operator
            servicePort: 80
